testsuite/tests/interpreter_errors/invalid_field_dot_access/test.out
main.adb
script.lkql:1:29: error: No field named f_nonExistingField on nodes of kind: CompilationUnit
1 | val p = select p @ * when p.f_nonExistingField is ObjectDecl
  |                             ^^^^^^^^^^^^^^^^^^ 

